--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-mongo-sanitize": "^2.2.0",
@@ -42,7 +43,7 @@
   "devDependencies": {
     "parcel-bundler": "^1.12.5"
   },
-    "engines": {
-      "node": ">=10.0.0"
-    }
+  "engines": {
+    "node": "^20"
+  }
 }
